# glimmer-cism-svn

glimmer-cism-lanl/branches/distributed/src/fortran/SLAP_library/: Makefile.am
glimmer-cism-lanl/branches/parallel/src/cpp/: Makefile.am  README  SI_Drive.cpp  Simple_Interface.cpp  Simple_Interface.hpp  call_trilinos.cpp  helloCXX.cpp  helloF.F90  interface_modCXX.F90  matrixInterface.cpp  matrixInterface.hpp  solveTriadMatrixWithTrilinos.cpp  trilinosLinearSolver.cpp  trilinosPartition.cpp
glimmer-cism-lanl/branches/plume_integration2/tests/petermann/: Makefile.am  build_case.py  check_job.py  checkpoint_run.py  def_working_petermann.py  deljob.py  filter_times.py  gcplume.py  ghost_shelf.config.py  jun24_sample.config.py  kickoff9.py  kickoff_steady.py  nc_all.py  nc_find_last_nonnan_time.F90  nc_gen_input.F90  nc_gen_plume.F90  nc_last_time_slice.py  nc_regrid.F90  nc_uniform_end.F90  process_highres_jobs.py  process_jobs.py  process_trial_jobs.py  restart_-0.5_jobs.py  run_job.py  sample.gs.config.py  sample_jobdef.py  submit_GC_job.py  submit_filter_job.py  test.config  update_job.py
glimmer-cism-lanl/trunk/: Makefile.am  config.inc.in  configure.in
glimmer-cism-lanl/trunk/old_tests/ISMIP-HOM/: README  ishom.a.config  ishom.c.config  ishom.d.config  ishom.f.config  verify.py
glimmer-cism-lanl/trunk/old_tests/ross/: ross.config
glimmer-cism-lanl/trunk/old_tests/shelf/: compare-exact.py
glimmer-cism-lanl/trunk/src/fortran/: Makefile.am  glam.F90  glam_strs2.F90  glide.F90  glide_bwater.F90  glide_ground.F90  glide_lithot.F90  glide_nonlin.F90  glide_setup.F90  glide_temp.F90  glide_types.F90  glide_vars.def  glimmer_paramets.F90  glimmer_sparse.F90  glimmer_sparse_pardiso.F90  glimmer_sparse_type.F90  glimmer_sparse_umfpack.F90  ice3d_lib.F90  plume.F90  plume_context.F90  plume_io.F90  shelf_driver.F90  simple_forcing.F90  spin_temp.F90
glimmer-cism-lanl/trunk/src/fortran_oad/: Makefile  iso_c_binding.f90
glimmer-cism-lanl/trunk/tests/EISMINT-1/: README  e1-fm.3.config
glimmer-cism-lanl/trunk/tests/HO/ISMIP-HOM/: ishom.c.PBJ.config
glimmer-cism-lanl/trunk/tests/HO/ho-other/: hump.PP.config
glimmer-cism-lanl/trunk/tests/HO/petermann/: build_case.py  build_nc_gen_input  ideal_geometry.config  nc_gen_input.F90  petermann.config  standalone.nl
glimmer-cism-lanl/trunk/tests/HO/shelf/: circular-shelf.PBJ.config
glimmer-cism-lanl/trunk/tests/ISMIP-HOM/: ishom.a.evol.config  ishom.b.config
glimmer-cism-lanl/trunk/tests/SIA_Antarctica/: README
glimmer-cism-lanl/trunk/tests/SIA_Greenland/: 5kmGreenSpin_spinup.config
glimmer-cism-lanl/trunk/tests/petermann/: build_case.py  nc_gen_input.F90  nc_regrid.F90  partgrounded.nl  sample.config.py
glimmer-cism-lanl/trunk/tests/ross/: makerossnc.py  ross.config
glimmer-cism-lanl/trunk/tests/shelf/: confined-shelf.config  glimcdf.py  ice-tongue.py  square-shelf.py
glimmer-cism-lanl/trunk/tests/util/: Makefile.am  automatic_test.sh
glimmer-cism-lanl/trunk/tests2/: README  viewNetCDF.py
glimmer-cism-lanl/trunk/tests2/EISMINT-1/: e1-mm.1.config
glimmer-cism-lanl/trunk/tests2/HO/shelf/: confined-shelf.PBJ.config
glimmer-cism-lanl/trunk/tests2/ISMIP-HOM/: README  ishom.a.PBJ.config  ishom.a.PP.config  ishom.a.config  ishom.c.PP.config  netCDF.py  plotResults.py  runGlimmer.py
glimmer-cism-lanl/trunk/tests2/ISMIP-HOM/output/: glm1a005.txt  glm1a010.txt  glm1a020.txt  glm1a040.txt  glm1a080.txt  glm1a160.txt  ishom.a.10km.config  ishom.a.10km.nc  ishom.a.10km.out.nc  ishom.a.160km.config  ishom.a.160km.nc  ishom.a.160km.out.nc  ishom.a.20km.config  ishom.a.20km.nc  ishom.a.20km.out.nc  ishom.a.40km.config  ishom.a.40km.nc  ishom.a.40km.out.nc  ishom.a.5km.config  ishom.a.5km.nc  ishom.a.5km.out.nc  ishom.a.80km.config  ishom.a.80km.nc  ishom.a.80km.out.nc
glimmer-cism-lanl/trunk/tests2/ISMIP-HOM/scratch/: direction_x_unstag.txt  flwa.txt  h.txt  iterdebug.nc  ustar_afterbc.txt  ustar_beforebc.txt
glimmer-cism-lanl/trunk/tests2/SIA_Antarctica/: 10kmAntSpin.config  specmap_125kyr_glimmer_friendly.data
glimmer-cism-lanl/trunk/tests2/SIA_Greenland/: 5kmGreenSpin_spinup.config  GRIP120kyr_oisotopes_glimmer_friendly.data  README  elegreen_ff1.0_s0.45d4.dump  specmap_120kyr_glimmer_friendly.data
glimmer-cism-lanl/trunk/tests2/ho-other/: README  hump.PBJ.config
glimmer-cism-lanl/trunk/tests2/ross/: README  plotResults.py  ross.PP.config  ross.config
glimmer-cism-lanl/trunk/tests2/shelf/: README  confined-shelf.config  confined-shelf.py
glimmer-cism/erosion/branches/SIMPLE-EROSION/: ChangeLog  Makefile.am  NEWS  configure.in
glimmer-cism/erosion/branches/SIMPLE-EROSION/doc/: erosion_pdf.tex
glimmer-cism/erosion/branches/SIMPLE-EROSION/src/: Makefile  erosion_version.f90.in
glimmer-cism/erosion/branches/SIMPLE-EROSION/tests/: erosion1.config
glimmer-cism/erosion/tags/RELEASE_0_1/src/: Makefile.am  erosion_setup.f90  erosion_types.f90
glimmer-cism/erosion/trunk/: ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.in
glimmer-cism/erosion/trunk/doc/: Makefile.am  erosion.bib  erosion.tex  erosion_pdf.tex
glimmer-cism/erosion/trunk/doc/common/: definitions.tex
glimmer-cism/erosion/trunk/doc/erosion/: Makefile.am  erosion.tex  transport.tex  ug.tex
glimmer-cism/erosion/trunk/python/: Makefile.am  plot_seds.py  plot_seds_profile.py
glimmer-cism/erosion/trunk/src/: Makefile  Makefile.am  advect_2ndmo.f90  eis_erosion.f90  erosion.F90  erosion.f90  erosion_advect.f90  erosion_integrate2d.f90  erosion_sediment.F90  erosion_sediment.f90  erosion_setup.f90  erosion_transport.f90  erosion_transport_2ndmo.f90  erosion_transport_fv.f90  erosion_transport_interp.f90  erosion_types.f90  erosion_vars.def  geometry.f90  glimmer_coordinates.f90  glimmer_interpolate2d.f90  runge_kutta.f90  simple_erosion.f90  sparse.f90  test_advect.f90  test_geometry.f90  test_integrate2d.f90  test_interpolate2d.f90  test_rk4.f90  test_transport.f90
glimmer-cism/erosion/trunk/tests/: Makefile.am  er-transport1.config  erosion2.config  fenscan.config  test_transport.sh  topo.nc  trans_velo.config.in  trans_velo.py
(+660 files in other folders)
