graphics = ice_velo.pstex ice_velo.pstex_t erosion_layers.pstex erosion_layers.pstex_t lagrange1d.pstex lagrange1d.pstex_t lagrange2d.pstex lagrange2d.pstex_t
EXTRA_DIST = ice_velo.fig erosion_layers.fig lagrange1d.fig lagrange2d.fig $(graphics)
BUILT_SOURCES = $(graphics)
CLEANFILES = $(BUILT_SOURCES)
include $(top_srcdir)/doc/make_doc.rules
